code improvements suggested by ErrorProne